Started challenge 3, started updating docker to give better access

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,20 @@
 FROM python:2.7
 
-# ARG UNAME=user
-# ARG UID=1000
-# ARG GID=1000
+# Trick for getting file ownership right in bind-mounted docker volumes
+ARG UNAME=user
+ARG UID=1000
+ARG GID=1000
 
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
     vim nano
+
+
+RUN groupadd -g $GID $UNAME && \
+    useradd -m -u $UID -g $GID -s /bin/bash $UNAME
+
+# Include the next two lines if you are debugging the Dockerfile
+#RUN apt list --installed | grep zip
+#RUN pip3 list
+
+USER ${UNAME}
