Tweaks to docker

--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.7'
 x-build: &default-build
   context: ../
   args:
-    - UID=${UID:?Run generate_env}
-    - GID=${GID:?Run generate_env}
+    - UID=1000
+    - GID=1000
 x-volumes: &default-volumes
   - '${HOME}:${HOME}'
 
@@ -11,7 +11,7 @@ services:
   dev:
     build: 
       << : *default-build
-      dockerfile:  Dockerfile
+      dockerfile:  .devcontainer/Dockerfile
     image: foo.bar
     privileged: true
     volumes: *default-volumes
